loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: '(' expected but 'false' found.
while false (estFaceMur) {
      ^LoopWhile:5: error: illegal start of simple expression
	}
        ^